```
v0.2.7
1.重新修复了binAdjust中数值分箱输入乱序情况下报错的问题
2.为避免因浮点数据类型混乱而造成bug,全局加入对数值浮点数据dtype类型的校验,要求所有输入数据的浮点类型必须为float64
3.移除了多个模块中的浮点型数类型控制参数
4.修复了base中参数校验与变量值校验的部分bug
5.更新单元测试脚本,更新部分代码说明
6.更新example
```

```
v0.2.6
1.更新单元测试脚本，加入了代码覆盖率
2.现在preSelector中若存在任何步骤筛选掉所有特征，将停止下一步筛选并输出结果
3.移除preSelector中特征筛选方法Permutation Importance和Leave One Feature Out Importance
4.修复EDAReport的bug,删除了参数category_col与numeric_col参数，加入参数missing_values
4.修复了nanTransformer中indicator为True时产生的缺失值指代列列名重复的bug
5.修复了preSelector,dtypeAllocator中object类型问题，生成方式由astype('object')变为astype('str')
6.修复了LgbmPISelector中选择贝叶斯优化且样本权重为None时会报错的bug
7.在varGroupsReport中加入因rowlimit设定过高而导致无法产生报告的错误提示
```

```
v0.2.5
1.加入了新的单元测试脚本，移除旧test脚本
2.修复faSelector的bug，在计算距离矩阵前将移除constant特征
3.优化代码，在部分模块中加入对Series的name检查
4.修复preSelector在windows平台下的乱码错误
5.修复perfeval在plotnine 0.9.0下图例显示问题
```

```
v0.2.4
1.新增了二分类决策模型评估函数perfEval2
2.stepLogit中加入标准化回归系数属性
3.修复了binAdjust绘图数据显示的bug
4.修复了varGroupsReport绘图数据显示的bug
5.修复了EDAReport中分类特征频数统计中的缺失值问题
6.修复了binAdjust中数值分箱输入乱序情况下报错的问题
7.修复了stepLogit中单变量模型的vif报错问题
8.补充了部分函数的文档
```

```
v0.2.3
1.新增审批决策报表函数GainsTable
2.优化了shapCheck代码
3.修复了LgbmShapRFECV中可能导致分类特征dtype变为category的bug
4.相关文档维护
```

```
v0.2.2
1.新增特征筛选方法LgbmShapRFESelector和LgbmPISelector
2.优化了preSelector代码
3.移除特征筛选方法_fliterByShuffle,LgbmRFESelector
4.移除BayesianXGBTuner,BayesianLGBMTuner,BayesianCBTuner
5.修复了网格参数优化、减半参数优化、贝叶斯优化中early_stopping的bug
6.相关文档维护
```

```
v0.2.1
1.在网格参数优化、减半参数优化、贝叶斯优化中加入对Catboost的支持
2.在网格参数优化、减半参数优化、贝叶斯优化中加入early_stopping参数
3.优化贝叶斯优化代码使之能够支持设定随机数实现模型复现
4.优化贝叶斯优化代码使之能够支持更多参数选择，并加入固定参数
5.LgbmRFESelector更名为LgbmRFECVSelector
6.dtypeAllocator中的number类型以float和int进行了进一步的区分
7.修复了outliersTransformer中的后非number类型列的丢失问题
8.修复了减半参数优化中模型无法通过随机数复现的bug
9.相关文档维护
```

```
v0.2.0
1.加入特征筛选方法LgbmRFESelector和LgbmSeqSelector
2.删除了corrSelector
3.优化代码
4.文档维护
```

```
v0.1.9.1
1.更新了demo:4.经典Logistic评分卡.ipynb
2.修复了诸多bug
3.文档维护
```

```
v0.1.9
1.加入perfEval模块，支持二分类排序模型评估常见的评估图ks、roc、gini、gain、lorenz、f1、pr、density
2.优化了部分模块
3.修复bug
4.文档维护
```

```